c1_chess upd.links

--- a/c1_chess/c1_editor.htm
+++ b/c1_chess/c1_editor.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <HEAD>
 <title>Chess PGN to HTML tool v1.0</title>
-<link rel="shortcut icon" href="/f.txt" type="image/vnd.microsoft.icon"/>
+<link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon"/>
 <meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name="chess js library version 2" content="http:/chessforeva.blogspot.com" />
 <link rel="StyleSheet" href="c1_chess.css" type="text/css">
@@ -301,7 +301,7 @@ function AddBrowsables()
      if(fl_Compr && fl_Compr_max) _ht+='(slower on clicks)';
      
      if(f_HTML) _ht += 'Copy/paste in a new text file, then save as .htm; Put on your server (or ' + 
-	'<a href="http://smecers.appspot.com/AddHtml.htm" target="_blank">here</a>).' + '<br>';
+	'<a href=" " target="_blank"> </a>).' + '<br>';
      if(f_BLOCK) _ht += 'Copy/paste this block into body of other .htm' + '<br>';
  
     
